[package]
name = "aa-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
prost = "0.13.3"
tokio = { version = "1.41", features = ["rt-multi-thread"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12"
